# tallerSIU

./: .gitattributes  .gitignore  Admin.cpp  Admin.h  Alumno.cpp  Alumno.h  CMakeLists.txt  Comando.cpp  Comando.h  Docente.cpp  Docente.h  IdMateria.cpp  IdMateria.h  IdUsuario.cpp  IdUsuario.h  Materia.cpp  Materia.h  MovimientoInvalido.cpp  MovimientoInvalido.h  README.md  SIU.cpp  SIU.h  Socket.cpp  Socket.h  SocketException.cpp  SocketException.h  Usuario.cpp  Usuario.h  client_main.cpp  client_proxyServer.cpp  common_Socket.h  main.cpp  server_Admin.h  server_Alumno.h  server_Comando.cpp  server_Comando.h  server_ComandoDesinscribir.cpp  server_ComandoInscribir.h  server_ComandoListarMaterias.h  server_Docente.cpp  (+11 more)
src/: CMakeLists.txt  client_proxyServer.h  common_Socket.cpp  common_SocketException.cpp  common_SocketException.h  server_Admin.cpp  server_Alumno.cpp  server_ComandoDesinscribir.h  server_ComandoInscribir.cpp  server_ComandoListarInscripciones.cpp  server_ComandoListarInscripciones.h  server_ComandoListarMaterias.cpp  server_IdMateria.cpp  server_IdUsuario.cpp  server_IdUsuario.h  server_Logger.cpp  server_Logger.h  server_MonitorSiu.cpp  server_MonitorSiu.h  server_MovimientoInvalido.cpp  server_ProxyCliente.cpp  server_RealSIU.cpp  server_SIUGuaramini.cpp  server_Server.cpp  server_Server.h  server_Thread.h  server_Usuario.cpp  server_Usuario.h  server_main.cpp
